--- a/RideShare/RideShare/View/ProfileMenuPage.xaml
+++ b/RideShare/RideShare/View/ProfileMenuPage.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RideShare.ProfilePage">
-  <StackLayout>
-    <Label Font="20" Text="Profile Page" HorizontalOptions="Center" VerticalOptions="Center"/>
-  </StackLayout>
+             x:Class="RideShare.View.ProfileMenuPage"
+             Title="Menu">
+  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
 </ContentPage>
