--- a/RideShare/RideShare/View/ProfileMenuPage.xaml
+++ b/RideShare/RideShare/View/ProfileMenuPage.xaml
@@ -3,5 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RideShare.View.ProfileMenuPage"
              Title="Menu">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <ContentPage.Content>
+    <StackLayout VerticalOptions = "FillAndExpand">
+      <ListView VerticalOptions="FillAndExpand" SeparatorVisibility="None">
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
+    </StackLayout>
+  </ContentPage.Content>
 </ContentPage>
