--- a/RideShare/RideShare/View/NavigatorMapPage.xaml
+++ b/RideShare/RideShare/View/NavigatorMapPage.xaml
@@ -2,5 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RideShare.View.NavigatorMapPage">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <StackLayout Orientation="Vertical" Padding="5" Spacing="5">
+    <StackLayout VerticalOptions="Center" HorizontalOptions="Center" Padding="5">
+      <Label Text="Navigation Map" FontSize="20"></Label>
+    </StackLayout>
+  </StackLayout>
 </ContentPage>
